[gd_scene load_steps=30 format=2]

[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Animations/Roll/icon.png" type="Texture" id=2]
[ext_resource path="res://Animations/EnterBlink/enter_blink3.png" type="Texture" id=3]
[ext_resource path="res://Animations/EnterBlink/enter_blink2.png" type="Texture" id=4]
[ext_resource path="res://Animations/EnterBlink/enter_blink1.png" type="Texture" id=5]
[ext_resource path="res://Animations/Roll/icon1.png" type="Texture" id=6]
[ext_resource path="res://Animations/Roll/icon2.png" type="Texture" id=7]
[ext_resource path="res://Animations/Roll/icon3.png" type="Texture" id=8]
[ext_resource path="res://Animations/Roll/icon4.png" type="Texture" id=9]
[ext_resource path="res://Animations/Roll/icon5.png" type="Texture" id=10]
[ext_resource path="res://Animations/Roll/icon6.png" type="Texture" id=11]
[ext_resource path="res://Animations/Roll/icon7.png" type="Texture" id=12]
[ext_resource path="res://Animations/Roll/icon8.png" type="Texture" id=13]
[ext_resource path="res://Animations/Roll/icon9.png" type="Texture" id=14]
[ext_resource path="res://Animations/Roll/icon10.png" type="Texture" id=15]
[ext_resource path="res://Animations/Roll/icon11.png" type="Texture" id=16]
[ext_resource path="res://Characters/EnterBlink.gd" type="Script" id=17]
[ext_resource path="res://Characters/Player/Player_states/Player_state_machine.gd" type="Script" id=18]
[ext_resource path="res://Characters/Player/Player_states/States/In_air/Jump.gd" type="Script" id=19]
[ext_resource path="res://Characters/Player/Player_states/States/On_ground/Idle.gd" type="Script" id=20]
[ext_resource path="res://Characters/Player/Player_states/States/On_ground/Move.gd" type="Script" id=21]
[ext_resource path="res://Characters/Player/Player_states/States/In_air/Fall.gd" type="Script" id=22]
[ext_resource path="res://Abilities/Player/Shoot/Shoot.gd" type="Script" id=23]
[ext_resource path="res://Abilities/Player/Shoot/Bullet.tscn" type="PackedScene" id=24]
[ext_resource path="res://Abilities/Player/SpellBlast/CastSpell.gd" type="Script" id=25]
[ext_resource path="res://Abilities/Player/SpellBlast/SpellBlast.tscn" type="PackedScene" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.3007, 33.6511 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "enter_blink",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "double_jump",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "enter_blink",
"speed": 5.0
} ]

[node name="Stickman" type="KinematicBody2D"]
position = Vector2( 508.537, 264.805 )
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.102398, -0.19146 )
scale = Vector2( 1, 0.941731 )
shape = SubResource( 1 )

[node name="Movement" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"

[node name="EnterBlink" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "enter_blink"
script = ExtResource( 17 )

[node name="State" type="Node" parent="."]
script = ExtResource( 18 )

[node name="Jump" type="Node" parent="State"]
script = ExtResource( 19 )

[node name="Idle" type="Node" parent="State"]
script = ExtResource( 20 )

[node name="Move" type="Node" parent="State"]
script = ExtResource( 21 )

[node name="Fall" type="Node" parent="State"]
script = ExtResource( 22 )

[node name="Shoot" type="Node" parent="."]
script = ExtResource( 23 )

[node name="Bullet" parent="Shoot" instance=ExtResource( 24 )]
visible = false

[node name="CastSpell" type="Node" parent="."]
script = ExtResource( 25 )

[node name="SpellBlast" parent="CastSpell" instance=ExtResource( 26 )]
visible = false
[connection signal="animation_finished" from="Movement" to="." method="_on_Movement_animation_finished"]
[connection signal="animation_finished" from="EnterBlink" to="." method="_on_EnterBlink_animation_finished"]
